--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/leaflet": "^1.9.7",
+    "@types/react-leaflet": "^3.0.0",
+    "axios": "^1.6.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-routing-machine": "^0.0.5",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5"
   },
