--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/leaflet": "^1.9.7",
     "@types/react-leaflet": "^3.0.0",
